@@ -4,6 +4,8 @@
 
 2005-11-16  Kevin P. Fleming  <kpfleming@digium.com>
 
+	* res/Makefile: issue mpg123 not-installed warning at 'make install' time, not 'make'
+
 	* apps/app_forkcdr.c (forkcdr_exec): issue warning (and don't segfault) if ForkCDR is called on a channel that doesn't have a CDR (issue #5763)
 
 	* channel.c (ast_queue_hangup): ensure that the channel lock is held before changing its fields... (issue #5770)
